src/content/tools/docs/2.0.1/pipeline_lint_tests/files_unchanged.md
# files_unchanged

#### PipelineLint.files_unchanged()

Checks that certain pipeline files are not modified from template output.

Iterates through the pipeline’s directory content and compares specified files
against output from the template using the pipeline’s metadata. File content
should not be modified / missing.

Files that must be unchanged:

```default
.gitattributes
.markdownlint.yml
.github/.dockstore.yml
.github/CONTRIBUTING.md
.github/ISSUE_TEMPLATE/bug_report.md
.github/ISSUE_TEMPLATE/config.yml
.github/ISSUE_TEMPLATE/feature_request.md
.github/PULL_REQUEST_TEMPLATE.md
.github/workflows/branch.yml
.github/workflows/linting_comment.yml
.github/workflows/linting.yml
assets/email_template.html
assets/email_template.txt
assets/nf-core-PIPELINE_logo.png
assets/sendmail_template.txt
CODE_OF_CONDUCT.md
docs/images/nf-core-PIPELINE_logo.png
docs/README.md'
lib/nfcore_external_java_deps.jar
lib/NfcoreSchema.groovy
lib/NfcoreTemplate.groovy
['LICENSE', 'LICENSE.md', 'LICENCE', 'LICENCE.md'], # NB: British / American spelling
```

Files that can have additional content but must include the template contents:

```default
.gitignore
assets/multiqc_config.yaml
```
